--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>   
     </div>
 
-    <div id="inicio" style="display: none;">
+    <div id="inicio" class="display-none">
       <div>
         <button class="btn-iniciar" id="iniciar-juego">Iniciar juego</button>
       </div>
@@ -31,11 +31,11 @@
       </div>
     </div>
 
-    <div id="agregar-palabra">
+    <div id="agregar-palabra" class="display-none">
       <div class="input">
         <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Ingrese una palabra">
       </div>
-      <div class="buttons">
+      <div>
         <div class="info">
           <img src="img/Info.png" style="width: 1rem; height: 1rem;">
           <p>Máx. de 8 letras</p>
@@ -47,8 +47,61 @@
       </div>
     </div>
 
-    <div id="juego" style="text-align:center;">
-      <canvas id="ahorcado" height="800px" width="1200px" style="background-color: black; display: none;"></canvas>
+    <div id="juego">
+      <canvas id="ahorcado"></canvas>
+      <div class="word">
+
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+        <div class="letter">
+          <p>A</p>
+          <img src="img/underline.png">
+        </div>
+
+      </div>
+
+      <div class="other">
+        <p>B</p>
+        <p>J</p>
+        <p>K</p>
+        <p>C</p>
+        <p>B</p>
+        <p>J</p>
+        <p>K</p>
+        <p>C</p>
+        <p>F</p>
+      </div>
+
+      <div>
+        <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="nuevoJuego">Nuevo juego</button>
+        <button class="btn" id="desistir" style="width: 20.75rem; margin: 1rem;">Desistir</button> 
+      </div> 
     </div>
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="canvas.js"></script>
