diseño canvas terminado

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div id="juego">
-      <canvas id="ahorcado"></canvas>
+      <canvas id="ahorcado" width="600" height="400"></canvas>
       <div class="word">
 
         <div class="letter">
@@ -103,6 +103,10 @@
         <button class="btn" id="desistir" style="width: 20.75rem; margin: 1rem;">Desistir</button> 
       </div> 
     </div>
+
+    <footer>
+      <p>Todos los derechos reservados | © Ramiro Porta | 2022</p>
+    </footer>
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="canvas.js"></script>
     <script type="text/javascript" src="ahorcado.js"></script>
