--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
       </div>
 
       <div>
+        <input class="mobile" type="text" maxlength="1" placeholder="letra">
+      </div>
+
+      <div>
         <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="nuevoJuego">Nuevo juego</button>
         <button class="btn" id="desistir" style="width: 20.75rem; margin: 1rem;">Desistir</button> 
       </div> 
