Mensaje de advertencia cuando no pasa regex

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       </div>
 
       <div>
+        <p class="advertencias"></p>
         <input class="mobile" type="text" maxlength="1" placeholder="letra">
       </div>
 
