--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div>
         <div class="info">
           <img src="img/Info.png" style="width: 1rem; height: 1rem;">
-          <p>Máx. de 8 letras</p>
+          <p>Máx. de 8 letras, SIN espacios</p>
         </div>
         <div>
           <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="guardar">Guardar y empezar</button>
@@ -52,35 +52,35 @@
       <div class="word">
 
         <div class="letter">
-          <p>A</p>
+          <p>P</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>A</p>
+          <p>E</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>A</p>
+          <p>R</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>A</p>
+          <p>D</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>A</p>
+          <p>I</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>A</p>
+          <p>S</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>A</p>
+          <p>T</p>
           <img src="img/underline.png">
         </div>
         <div class="letter">
-          <p>a</p>
+          <p>E</p>
           <img src="img/underline.png">
         </div>
 
